# gamebookmaker-site

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs  compile_watch_sass.bat  foo.json  get_sass_windows.bat  notes.md
data/guest/: user_info.json
src/: data.rs  game_data.rs  main.rs  no_cache.rs  user_data.rs
style/: 404.css
templates/: 404.html.hbs  chapter_editor.html.hbs  editor.html.hbs  index.html.hbs  new.html.hbs  project_editor.html.hbs  user_page.html.hbs
